style fix: right align for the columns in the game list

--- a/bingo/static/bingo/style.css
+++ b/bingo/static/bingo/style.css
@@ -196,4 +196,9 @@ ul.pagination li.inactive {
 }
 table.game_list td {
     padding: 0 0.5ex;
+    text-align: right;
+}
+table.game_list th {
+    padding: 0 0.5ex;
+    text-align: center;
 }
